--- a/K8s/load-balancer.yaml
+++ b/K8s/load-balancer.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: load-balancer
+  name: petConnect-load-balancer
   labels:
-    app: react-docker
+    app: pet-connect-frontend
 spec:
   type: LoadBalancer
   ports:
   - port: 80
     targetPort: 80
     protocol: TCP
-    nodePort: 31000
+    # nodePort: 31000
   selector:
-    app: react-docker
+    app: pet-connect-frontend
