changed lb to lower case

--- a/K8s/load-balancer.yaml
+++ b/K8s/load-balancer.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: petConnect-load-balancer
+  name: petconnect-lb
   labels:
     app: pet-connect-frontend
 spec:
