--- a/pet-connect-frontend/package.json
+++ b/pet-connect-frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy":"http://localhost:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
