--- a/app/package.json
+++ b/app/package.json
@@ -9,12 +9,15 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "express": "^4.18.1",
+    "net": "^1.0.2",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
