--- a/app/package.json
+++ b/app/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "express": "^4.18.1",
+    "multiselect-react-dropdown": "^2.0.25",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -24,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy":"http://localhost:8080",
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
