--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "express": "^4.18.1",
+    "i": "^0.3.7",
+    "jwt-decode": "^3.1.2",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
