--- a/app/package.json
+++ b/app/package.json
@@ -7,10 +7,10 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "express": "^4.18.1",
-    "net": "^1.0.2",
-    "multiselect-react-dropdown": "^2.0.25",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
+    "multiselect-react-dropdown": "^2.0.25",
+    "net": "^1.0.2",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -19,6 +19,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "sass": "^1.54.8",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -29,7 +31,6 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:8080",
-
   "eslintConfig": {
     "extends": [
       "react-app",
