--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "emoji-picker-react": "^3.6.2",
     "express": "^4.18.1",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
@@ -15,6 +16,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
