--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.1",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
     "net": "^1.0.2",
     "nodemon": "^2.0.19",
