--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,8 @@
     "server": "nodemon server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:coverage": "npm run test -- --coverage"
   },
   "proxy": "http://localhost:8080",
   "eslintConfig": {
