--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
