--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.3.0",
