--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.2",
     "emoji-picker-react": "^3.6.2",
     "express": "^4.18.1",
+    "formik": "^2.2.9",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
@@ -33,7 +34,8 @@
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "sweetalert2": "^11.4.32",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
