--- a/app/package.json
+++ b/app/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
-    "emoji-picker-react": "^3.6.2",
+    "bootstrap-switch-button-react": "^1.2.0",
     "dotenv": "^16.0.2",
+    "emoji-picker-react": "^3.6.2",
     "express": "^4.18.1",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
@@ -15,11 +18,12 @@
     "multiselect-react-dropdown": "^2.0.25",
     "net": "^1.0.2",
     "nodemon": "^2.0.19",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
     "react-dropzone": "^14.2.2",
+    "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.9",
     "react-lightgallery": "^0.9.0",
     "react-rating": "^2.0.5",
