--- a/app/package.json
+++ b/app/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
     "@emotion/styled": "^11.10.4",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-switch-button-react": "^1.2.0",
-    "@emailjs/browser": "^3.7.0",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "dotenv": "^16.0.2",
     "emoji-picker-react": "^3.6.2",
     "express": "^4.18.1",
@@ -32,6 +32,7 @@
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.9",
     "react-lightgallery": "^0.9.0",
+    "react-paginate": "^8.1.3",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
