--- a/app/package.json
+++ b/app/package.json
@@ -4,27 +4,18 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
-    "@emotion/styled": "^11.10.4",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
-    "bootstrap-switch-button-react": "^1.2.0",
     "dotenv": "^16.0.2",
     "emoji-picker-react": "^3.6.2",
     "express": "^4.18.1",
-    "formik": "^2.2.9",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
     "net": "^1.0.2",
     "nodemon": "^2.0.19",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -32,7 +23,6 @@
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.9",
     "react-lightgallery": "^0.9.0",
-    "react-paginate": "^8.1.3",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -40,8 +30,7 @@
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "sweetalert2": "^11.4.32",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
