--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.2",
     "emoji-picker-react": "^3.6.2",
     "express": "^4.18.1",
+    "formik": "^2.2.9",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
@@ -30,6 +31,7 @@
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.9",
     "react-lightgallery": "^0.9.0",
+    "react-paginate": "^8.1.3",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
