--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,20 @@
-image: node:16
+# image: node:16
 
-stages:
-  - build
-  # - docker
-  # - deploy
+# stages:
+#   - build
+#   - docker
+#   # - deploy
 
-build:
-  image: node:16
-  stage: build
-  script:
-    - cd app/
-    - npm install --legacy-peer-deps
-    - npm run build
-  artifacts:
-      paths:
-        - build/
+# build:
+#   image: node:16
+#   stage: build
+#   script:
+#     - cd app/
+#     - npm install --legacy-peer-deps
+#     - npm run build
+#   artifacts:
+#       paths:
+#         - build/
 
 # docker:
 #   image: docker:20
